tests/fail/d001_double_unbox.dew
# D001: affine resource used after consumption — double unbox
def b = box(42);
def _ = unbox(b);
unbox(b)
